--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar  navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="container">
-                    <a class="navbar-brand" href="#">
-                        <img src="images/logo.png" alt="" width="159" height="40">
-                    </a>
+    <header class="row">
+        <nav class="navbar  navbar-expand-lg navbar-light bg-light ">
+            <div class="container-fluid ">
+                <div class="container ">
+                    <div class="col-lg-7">
+                        <a class="navbar-brand" href="#">
+                            <img src="images/logo.png" alt="" width="159" height="40">
+                        </a>
+                    </div>
                 </div>
 
 
@@ -35,15 +37,16 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse container-fluid input-group align-items-center justify-content-center"
+                <div class="collapse navbar-collapse container-fluid input-group align-items-center justify-content-center col-lg-7 "
                     id="navbarNav">
                     <ul class="navbar-nav ">
                         <form class="d-flex ">
-                            <div class="input-group-text" id="btnGroupAddon">
-                                <input class="form-control me-2 icon" type="search" placeholder="Search  &#xf002; "
-                                    aria-label="Search" aria-describedby="btnGroupAddon">
+                            <div class="input-group-text search-border" id="btnGroupAddon">
+                                <input class="form-control me-2 icon search-form" type="search"
+                                    placeholder="Search  &#xf002; " aria-label="Search"
+                                    aria-describedby="btnGroupAddon">
 
-                                <button class="btn btn-outline-light" type="submit"><i
+                                <button class="btn btn-outline-light search-submit" type="submit"><i
                                         class="fas fa-search"></i></button>
                             </div>
                         </form>
@@ -65,6 +68,73 @@
 
         </nav>
     </header>
+    <main>
+        <section class="slider m-5 ">
+            <div class="container  ">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner rounded-3">
+                        <div class="carousel-item active">
+                            <div class="row slider-height d-flex align-items-center ">
+                                <div class="col-lg-7">
+                                    <h1> Cool Dude tv</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
+                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
+                                    </p>
+                                    <h1>$430</h1>
+
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <h1> Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
+                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
+                                    </p>
+                                    <h1>$430</h1>
+                                    b
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row">
+                                <div class="col-lg-7">
+                                    <h1> Cool Dude xbox</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
+                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
+                                    </p>
+                                    <h1>$430</h1>
+                                    b
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
 
     <!-- script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
