--- a/index.html
+++ b/index.html
@@ -74,50 +74,22 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner rounded-3">
                         <div class="carousel-item active">
-                            <div class="row slider-height d-flex align-items-center ">
+                            <div class="row slider-height d-flex align-items-center p-5">
                                 <div class="col-lg-7">
                                     <h1> Cool Dude tv</h1>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
                                         blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
                                     </p>
                                     <h1>$430</h1>
-
+                                    <button type="button" class="btn btn-danger">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
                                 </div>
                                 <div class="col-lg-5">
                                     <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <div class="row">
-                                <div class="col-lg-7">
-                                    <h1> Cool Dude Headphone</h1>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
-                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
-                                    </p>
-                                    <h1>$430</h1>
-                                    b
-                                </div>
-                                <div class="col-lg-5">
-                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="row">
-                                <div class="col-lg-7">
-                                    <h1> Cool Dude xbox</h1>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
-                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
-                                    </p>
-                                    <h1>$430</h1>
-                                    b
-                                </div>
-                                <div class="col-lg-5">
-                                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                         data-bs-slide="prev">
