--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <!-- header  -->
     <header class="row">
         <nav class="navbar  navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid ">
@@ -69,6 +70,7 @@
         </nav>
     </header>
     <main>
+        <!-- hero  -->
         <section class="slider m-5 ">
             <div class="container  ">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -89,6 +91,38 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="carousel-item ">
+                            <div class="row slider-height d-flex align-items-center p-5">
+                                <div class="col-lg-7">
+                                    <h1> Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
+                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
+                                    </p>
+                                    <h1>$130</h1>
+                                    <button type="button" class="btn btn-danger">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item ">
+                            <div class="row slider-height d-flex align-items-center p-5">
+                                <div class="col-lg-7">
+                                    <h1> Cool Dude Xbox </h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae beatae
+                                        blanditiis quis tempore autem dolores explicabo repellendus delectus amet enim?
+                                    </p>
+                                    <h1>$1430</h1>
+                                    <button type="button" class="btn btn-danger">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                                <div class="col-lg-5">
+                                    <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -104,6 +138,162 @@
                 </div>
             </div>
         </section>
+        <!-- category  -->
+        <section class="container">
+            <h1>Categories</h1>
+            <div class="container px-2 m-3">
+                <div class="row gx-5">
+                    <div
+                        class="col d-flex align-items-center justify-content-between rounded-3 text-white px-3 py-2 mx-3 bg-warning bg-gradient ">
+                        <h2>Watch</h2>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                    <div
+                        class="col d-flex align-items-center justify-content-between rounded-3 text-white px-3 py-2 mx-3 bg-danger bg-gradient">
+                        <h2>BAG</h2>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                    <div
+                        class="col d-flex align-items-center justify-content-between rounded-3 text-white px-3 py-2 mx-3 bg-primary bg-gradient">
+                        <h2>SHOES</h2>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- product  -->
+        <section class="bg-light">
+            <!-- shoes  -->
+
+            <div class="container pt-5 d-flex justify-content-between align-items-center">
+                <h2>SHOES</h2>
+                <p>See All</p>
+            </div>
+            <div class="container pt-2 pb-5">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card border-0 rounded-3">
+                            <img src="images/shoes/shoe-1.png" class="card-img-top " alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">badami Juta</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$1289</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card  border-0 rounded-3">
+                            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">Siltu Juta</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$799</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 rounded-3">
+                            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">laltu juta</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$699</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- backpack  -->
+
+            <div class="container pt-5 d-flex justify-content-between align-items-center">
+                <h2>BackPack</h2>
+                <p>See All</p>
+            </div>
+            <div class="container pt-2 pb-5">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card border-0 rounded-3">
+                            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">lal bag</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$1289</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card  border-0 rounded-3">
+                            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">nila bag</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$799</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 rounded-3">
+                            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">kailla bag</h5>
+                                <p class="card-text text-center ">Some quick example text to build on the card title and
+                                    make up the
+                                    bulk
+                                    of the card's content.</p>
+                                <h3 class="text-center pb-2">$699</h3>
+                                <div class="d-grid col-6 mx-auto">
+                                    <button href="#" class="btn btn-dark  ">BUY NOW <i class="fa fa-arrow-right"
+                                            aria-hidden="true"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+
 
 
     </main>
