--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
     <main>
         <!-- hero  -->
-        <section class="slider m-5 ">
+        <section class="m-5 ">
             <div class="container  ">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner rounded-3">
@@ -292,7 +292,29 @@
             </div>
 
         </section>
+        <!-- subscribe  -->
+        <section class="container  p-5">
+            <div class="container bgpink p-5 rounded-3">
+                <h2 class="text-center mt-5">Let's Stay In Touch</h2>
+                <p class="text-center ">Get Updates on sales specials and more</p>
+                <div>
+                    <div class="input-group input-group-lg  rounded-3 pb-5 px-5">
+                        <div class="input-group input-group-lg  pb-5 px-5">
 
+                            <input type="text" class="form-control border-0" aria-label="Sizing example input"
+                                placeholder="Enter Your Email" aria-describedby="inputGroup-sizing-lg">
+                            <span class="input-group-text bg-danger bg-gradient text-white"
+                                id="inputGroup-sizing-lg">Large</span>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <p class="text-center mt-5"><small> @2021, panda shop </small></p>
+            </footer>
+
+        </section>
 
 
 
